data/all_generated_tests/raw_wast_tests/unreachable_TypeMismatchinControlFlowInstructions_1570.wast
;; 1. **Test Description:** Create a test where an `unreachable` instruction is placed within a `block` tag, followed by instructions attempting to add two integers.    **Constraint:** Ensure that, after triggering the trap via `unreachable`, the stack type consistency is disrupted by adding integers.    **Reasoning:** This checks if the implementation can handle stack type mismatch after the trap within a block context.

(assert_invalid
  (module (func $test_unreachable_in_block
    (block
      (unreachable)
      (i32.const 1)
      (i32.const 2)
      (i32.add)
    )
  ))
  "type mismatch"
)